--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ jupyter-contrib-nbextensions
 
 ipythontutor
 nbautoeval
-nb-courselevels
+jupyterlab-courselevels
 
-nbprune
+# for authors only
+# nbprune
