fixed an re-ran make norm

--- a/notebooks/Makefile
+++ b/notebooks/Makefile
@@ -7,6 +7,7 @@ include Makefile.book
 
 include Makefile.style
 
+NBNORMFLAGS = -l1 -s2 -t h1 -L Licence -S 'HTML\('
 include Makefile.norm
 
 include Makefile.prune
