--- a/notebooks/_config.yml
+++ b/notebooks/_config.yml
@@ -13,6 +13,7 @@ html:
   use_repository_button: yes
   use_edit_page_button: yes
   use_issues_button: yes
+  favicon: media/logo-p23.svg
 
 only_build_toc_files: true
 
