--- a/.nbhosting/nbhosting.yaml
+++ b/.nbhosting/nbhosting.yaml
@@ -21,8 +21,8 @@ tracks:
 
 builds:
   - id: handouts
-    name: format HTML
-    description: contenu statique et cherchable
+    name: numpy, pandas, mpl
+    description: HTML statique et cherchable
     directory: notebooks
     script: |
       pip install jupyter-book
