--- a/.nbhosting/nbhosting.yaml
+++ b/.nbhosting/nbhosting.yaml
@@ -14,7 +14,8 @@ tracks:
       - name: cheatsheets
         notebooks: [ "notebooks/4-*.md" ]
       - name: rappels Python
-        notebooks: [ "notebooks/5-[12]*-nb.py"]
+        # keep 5-99 out
+        notebooks: [ "notebooks/5-[0-8]*-nb.py"]
       # no longer relevant
       # - name: petit test Python
       #   notebooks: [ "notebooks/9-[0-9]*.py"]
