add readthedocs url for nbhosting

--- a/.nbhosting/nbhosting.yaml
+++ b/.nbhosting/nbhosting.yaml
@@ -28,6 +28,7 @@ builds:
     script: |
       pip install jupyter-book
       jupyter-book build .
+    readthedocs_url: https://ue12-p23-numerique.readthedocs.io/
 
 # no mapping needed
 static-mappings: []
