--- a/notebooks/_config.yml
+++ b/notebooks/_config.yml
@@ -41,3 +41,5 @@ sphinx:
     html_show_copyright: false
     # not quite convincing but...
     html_extra_path: ['media']
+  extra_extensions:
+    sphinx_exercise
