readthedocs_url -> external_url

--- a/.nbhosting/nbhosting.yaml
+++ b/.nbhosting/nbhosting.yaml
@@ -29,7 +29,7 @@ builds:
       pip install jupyter-book
       pip install sphinx-exercise
       jupyter-book build .
-    readthedocs_url: https://ue12-p23-numerique.readthedocs.io/
+    external_url: https://ue12-p23-numerique.external.io/
 
 # no mapping needed
 static-mappings: []
