crafted new logo for numerique

--- a/notebooks/_config.yml
+++ b/notebooks/_config.yml
@@ -2,7 +2,7 @@
 
 title: Python Numérique
 author: Valérie Roy & Thierry Parmentelat
-logo: media/logo-python.svg
+logo: media/logo-python-numerique.svg
 
 repository:
   url: https://github.com/ue12-p23/numerique
