replace covid TP with a link to flotpython-exos

--- a/notebooks/_toc.yml
+++ b/notebooks/_toc.yml
@@ -37,7 +37,8 @@ parts:
   - file: 2-10-timeseries-nb.py
   - url: https://flotpython-exos-ds.readthedocs.io/en/main/ds-howtos/fremont-bridge-howto-nb.html
     title: les vélos sur le pont de Fremont
-  - file: 2-12-pandas-TP-covid-nb.py
+  - url: https://flotpython-exos-ds.readthedocs.io/en/main/ds-tps/covid/README-covid-nb.html
+    title: TP Covid
   - url: https://flotpython-exos-ds.readthedocs.io/en/devel/ds-geo/tp-addresses/README-addresses-nb.html
     title: TP géoloc addresses
 - caption: visualition
